[package]
name = "iemanjad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
surrealdb = { version = "1.1.1", features = ["kv-speedb"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = "0.3.18"
